# Flashcards

./: CMakeLists.txt  README.md  createsetdialog.cpp  createsetdialog.h  createsetdialog.ui  flashcardsdata.cpp  flashcardsdata.h  flashcardset.cpp  flashcardset.h  importsetdialog.cpp  importsetdialog.h  importsetdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  previewdialog.cpp  previewdialog.h  previewdialog.ui  reviseview.cpp  reviseview.h  reviseview.ui  sets.json  setview.cpp  setview.h  setview.ui  test_import.txt  welcomeview.cpp  welcomeview.h  welcomeview.ui
